<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shaafi.blooddonate.RegisterClass">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/first_name"
            android:id="@+id/textViewFirstName"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:padding="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:includeFontPadding="true"
            android:hint="@string/enter_first_name"
            android:background="#FFF"
            android:ems="10"
            android:id="@+id/editTextFirstName"
            android:padding="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/last_name"
            android:id="@+id/textViewName"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:padding="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:includeFontPadding="true"
            android:hint="@string/enter_last_name"
            android:background="#FFF"
            android:ems="10"
            android:id="@+id/editTextLastName"
            android:padding="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textViewPass"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:padding="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:includeFontPadding="true"
            android:hint="@string/enter_pass"
            android:background="#FFF"
            android:ems="10"
            android:id="@+id/editTextLastPass"
            android:padding="10sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirm_pass"
            android:id="@+id/textViewConfirmPass"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:padding="5sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:includeFontPadding="true"
            android:hint="@string/reenter_pass"
            android:background="#FFF"
            android:ems="10"
            android:id="@+id/editTextLastConfirmPass"
            android:padding="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/age_text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:id="@+id/textViewAge"
            android:padding="5sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/editTextAge"
            android:background="#FFF"
            android:padding="10sp"
            android:inputType="number"
            android:includeFontPadding="true"
            android:hint="@string/year_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/blood_grp_text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:id="@+id/textViewBloodGrp"
            android:padding="5sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/editTextBloodGrp"
            android:background="@android:drawable/btn_dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location_text"
            android:id="@+id/textViewLocation"
            android:padding="5sp" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/editTextLocation"
            android:background="#FFF"
            android:layout_gravity="center_horizontal"
            android:padding="10sp"
            android:inputType="textAutoCorrect"
            android:includeFontPadding="true"
            android:hint="@string/city_name_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/fitness_warning"
            android:id="@+id/textViewPhysical"
            android:textStyle="bold"
            android:textColor="#fff"
            android:padding="10sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8sp">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="YES"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:id="@+id/radio_button_Y"
            android:checked="false"
            android:padding="5sp"
            android:onClick="activeCheck"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="NO"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:id="@+id/radio_button_N"
            android:checked="false"
            android:padding="5sp"
            android:onClick="activeCheck"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="#FFF"
            android:background="#39a324"
            android:textSize="25sp"
            android:id="@+id/button_reg"
            android:layout_gravity="center_horizontal"
            android:padding="8sp"
            android:onClick="doneRegister"/>
    </LinearLayout>
</ScrollView>
