<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".VerificationCodeInput">

    <TextView
        android:id="@+id/textViewEnterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/enter_the_verification_code"
        android:textColor="#fff"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editTextVerify"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textViewEnterPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="#fff"
        android:gravity="center"
        android:hint="@string/enter_0000_hint"
        android:inputType="number"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:onClick="doneVerify"
        android:text="@string/submit"/>


</RelativeLayout>
