<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.shaafi.blooddonate.PhoneVerify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_phn_number"
        android:textColorLink="#eee9aa"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/textViewPhoneNum" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#fff">



        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/phn_spinner"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:hint="@string/phn_num_hint"
            android:padding="10dp"
            android:ems="11"
            android:background="#cccccc"
            android:inputType="phone"
            android:id="@+id/editTextPhoneNumber" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/verification_note"
        android:textColor="#fcff3d"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:id="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:background="#0dd242"
        android:textSize="20sp"
        android:padding="5dp"
        android:id="@+id/buttonPhoneRegister"
        android:onClick="phoneRegister"/>

    </LinearLayout>
</ScrollView>
